crates/ars-components/src/specialized/contextual_help/snapshots/ars_components__specialized__contextual_help__tests__contextual_help_content_closed.snap
---
source: crates/ars-components/src/specialized/contextual_help/mod.rs
expression: "snapshot_attrs(&contextual_help_api(false, test_props()).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "contextual-help",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "closed",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "help-heading",
            ),
        ),
        (
            Dir,
            String(
                "ltr",
            ),
        ),
        (
            Id,
            String(
                "help-content",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
