crates/ars-components/src/specialized/contextual_help/snapshots/ars_components__specialized__contextual_help__tests__contextual_help_dismiss_button.snap
---
source: crates/ars-components/src/specialized/contextual_help/mod.rs
expression: "snapshot_attrs(&contextual_help_api(true,\ntest_props()).dismiss_button_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "dismiss-button",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "contextual-help",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Dismiss",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
